# freebus-kerala

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  tailwind.config.js
.github/workflows/: deploy.yml  scrape.yml
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  route.py  schedule.py  stop.py
app/routers/: api.py  pages.py
app/schemas/: __init__.py  nearby.py  route.py  stop.py
app/services/: geo.py  schedule.py  search.py
app/static/: manifest.json
app/static/css/: app.css  app.min.css
app/static/js/: app.js  i18n.js  sw.js
app/static/locales/: en.json  ml.json
app/templates/: base.html  index.html  nearby.html  offline.html  results.html  route_detail.html  scheme_info.html
app/templates/partials/: bus_card.html  countdown_badge.html  nav.html  stop_header.html
migrations/: 001_initial_schema.sql  002_route_stops_and_reconciliation.sql
scraper/: __init__.py  classifier.py  fetcher.py  geocoder.py  main.py  parser.py  upserter.py
scripts/: export_csv.py  seed_stops.py
tests/: test_api.py  test_geo.py  test_schedule.py  test_scraper.py  test_search.py
